Simplify annotations in AllowOriginProps Delete extra httpclient dependency